--- a/Lab03/Lab03/Lab03.csproj
+++ b/Lab03/Lab03/Lab03.csproj
@@ -56,6 +56,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="EditPatientForm.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -63,6 +67,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="EditPatientForm.xaml.cs">
+      <DependentUpon>EditPatientForm.xaml</DependentUpon>
     </Compile>
     <Compile Include="Hospital.cs" />
     <Compile Include="MainWindow.xaml.cs">
